# Aircraft_Maneuver

Aircraft_Maneuver/: Aircraft_Maneuver.sln
Aircraft_Maneuver/Aircraft_Maneuver/: AircraftModelLibrary.cpp  AircraftModelLibrary.h  AircraftModule.h  Aircraft_Maneuver.vcxproj  Aircraft_Maneuver.vcxproj.filters  CMakeLists.txt  CMakeLists_simple.txt  CoordinateTransform.cpp  CoordinateTransform.h  Eigen_Coordinate_Transform_Guide.md  EulerAngleCalculation.cpp  EulerAngleCalculation.h  FighterJet.cpp  FighterJet.h  ImprovedCoordinateTransform.cpp  ImprovedCoordinateTransform.h  ManeuverModel.cpp  ManeuverModel.h  ManeuverModel_Architecture.md  ManeuverModels_Optimized.md  ManeuverTemplate.h  PROGRAM_GUIDE.md  README.md  README_Coordinate_Transform.md  README_Eigen_Coordinate_Transform.md  main.cpp
Aircraft_Maneuver/Aircraft_Maneuver/.cache/clangd/index/: AircraftModelLibrary.cpp.14118F301CD1CCFC.idx  AircraftModelLibrary.h.3BCFC9DE452171F3.idx  CoordinateTransform.cpp.C8E75C8494E2905C.idx  CoordinateTransform.h.22D9C77F4817278E.idx  CoordinateTransformExample.cpp.1697DDAA8D6FBF28.idx  EulerAngleCalculation.cpp.A1DC800AFFC8B63D.idx  EulerAngleCalculation.h.191792EA5E477980.idx  FighterJet.cpp.925A123A6471F5E2.idx  FighterJet.h.29E877863542BE8A.idx  ManeuverModelExample.cpp.34EBC385A8059EA4.idx  ManeuverModels.cpp.407B57565179A482.idx  ManeuverModels.h.D5081E1C0632C220.idx  Maneuvers.cpp.8DE1DEFDA64D7E16.idx  main.cpp.3051BB7C86BD49F2.idx  test_compile.cpp.0F2061FE4C75E26F.idx
Aircraft_Maneuver/Aircraft_Maneuver/Debug/: vc142.idb
Aircraft_Maneuver/Aircraft_Maneuver/Debug/Aircraft.76CAEAE4.tlog/: Aircraft_Maneuver.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Aircraft_Maneuver/Aircraft_Maneuver/examples/: example_maneuver_usage.cpp
Aircraft_Maneuver/Aircraft_Maneuver/tests/: test_aircraft_basic.cpp  test_compile.cpp  test_coordinate_transform.cpp
Aircraft_Maneuver/Debug/: Aircraft_Maneuver.ilk
